--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 
     </div>
 
+    <!-- Bouton pour ouvrir la fenêtre du chatbot (nouveau bouton ajouté) -->
+    <button id="open-chatbot" class="material-symbols-rounded" style="position: fixed; bottom: 20px; right: 20px; background: #5350C4; color: white; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 24px; cursor: pointer; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
+      chat
+    </button>
+
     <!-- Lien vers le fichier JavaScript pour gérer les interactions -->
     <script src="script.js"></script>
   </body>
